--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@ DB_PASSWORD = root
 DB_SERVER = localhost
 DB_DATABASE = taller_repuestos
 DB_PORT = 5432
+
+DB_USER = postgres
+DB_PASSWORD = RootUmes2025
+DB_SERVER = db.xvrrdexpfjzaamcqcixl.supabase.co
+DB_DATABASE = postgres
+DB_PORT = 5432
