--- a/.envexample
+++ b/.envexample
@@ -6,3 +6,9 @@ DB_USER = root
 DB_PASSWORD =
 DB_SERVER = localhost
 DB_DATABASE = taller_repuestos
+
+DB_USER = postgres
+DB_PASSWORD = RootUmes2025
+DB_SERVER = db.xvrrdexpfjzaamcqcixl.supabase.co
+DB_DATABASE = postgres
+DB_PORT = 5432
