--- a/.envexample
+++ b/.envexample
@@ -7,8 +7,10 @@ DB_PASSWORD =
 DB_SERVER = localhost
 DB_DATABASE = taller_repuestos
 
-DB_USER = postgres
+DB_USER = postgres.xvrrdexpfjzaamcqcixl
 DB_PASSWORD = RootUmes2025
-DB_SERVER = db.xvrrdexpfjzaamcqcixl.supabase.co
+DB_SERVER = aws-1-us-east-2.pooler.supabase.com
 DB_DATABASE = postgres
-DB_PORT = 5432
+DB_PORT = 6543
+
+postgresql://postgres.xvrrdexpfjzaamcqcixl:[YOUR-PASSWORD]@aws-1-us-east-2.pooler.supabase.com:6543/postgres
